add for every resolution

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="description" content="Page for Designers" />
     <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="Tamar Putkaradze" />
-    <meta property="og:url" content="https://ttamar.github.io/midterm_project/" />
+    <meta
+      property="og:url"
+      content="https://ttamar.github.io/midterm_project/"
+    />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Designers choise" />
     <meta
@@ -59,13 +62,13 @@
                 </li>
                 <li>
                   <a href="#">
-                    <img src="images/Component 5 – 2.png" alt="logo" />
+                    <img src="images/Component 8 – 2.png" alt="logo" />
                     <p>Favourites</p>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="images/Component 8 – 2.png" alt="logo" />
+                    <img src="images/Component 1 – 2.png" alt="logo" />
                     <p>Activires</p>
                   </a>
                 </li>
@@ -103,6 +106,51 @@
         </div>
       </div>
       <div class="maincontainer">
+        <div class="unvisibleheader">
+          <div class="blackheader">
+            <div class="blackheadernav flex">
+              <div class="headerlogo">
+                <a href="#">
+                  <img src="images/design.today.png" alt="logo" />
+                </a>
+              </div>
+              <div class="black_nav">
+                <ul class="flex">
+                  <li>
+                    <a href="#">
+                      <img src="images/Component 5 – 2.png" alt="logo" />
+                      <p>Home</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="images/Component 3 – 2.png" alt="logo" />
+                      <p>Explore</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="images/Component 4 – 2.png" alt="logo" />
+                      <p>Folders</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="images/Component 8 – 2.png" alt="logo" />
+                      <p>Favourites</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="images/Component 1 – 2.png" alt="logo" />
+                      <p>Activires</p>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
         <header>
           <form action="">
             <div>
@@ -118,9 +166,11 @@
           </form>
           <div>
             <div class="profilenav">
-              <div><p>go pro!</p></div>
-              <div><img src="images/Component 11 – 2.png" alt="message" /></div>
-              <div>
+              <div class="gopro"><p>go pro!</p></div>
+              <div class="message">
+                <img src="images/Component 11 – 2.png" alt="message" />
+              </div>
+              <div class="notificationbell">
                 <img src="images/Component 7 – 2.png" alt="notificationbell" />
               </div>
               <div>
@@ -128,14 +178,19 @@
                   <img src="images/Group 33.png" alt="profilepicture" />
                 </a>
               </div>
-              <div><button>upload</button></div>
+              <div>
+                <button>upload</button>
+              </div>
             </div>
           </div>
         </header>
         <section class="container">
           <div class="upperbar">
+            <div class="menubutton">
+              <button>menu</button>
+            </div>
             <div>
-              <ul class="flex">
+              <ul class="flex menuinfo">
                 <li>All</li>
                 <li>Web design</li>
                 <li>3D</li>
@@ -342,78 +397,86 @@
             </div>
           </div>
         </section>
-        <section class="flex upperinfo">
-          <div class="columnflex">
-            <div>
-              <p>For designers</p>
-            </div>
-            <div>
-              <ul>
-                <li>Go Pro!t</li>
-                <li>Explore design work</li>
-                <li>Design blog</li>
-                <li>Overtime podcast</li>
-                <li>Dribbble meetups</li>
-                <li>Playoffs</li>
-                <li>Weekly Warm-Up</li>
-                <li>Code of conduct</li>
-              </ul>
-            </div>
+        <section class="textwrapper">
+          <div class="unvisiblefooterinfo">
+            <p>For designers</p>
+            <p>Hire designers</p>
+            <p>Company</p>
+            <p>Directories</p>
           </div>
-          <div class="columnflex">
-            <div>
-              <p>Hire designers</p>
+          <div class="upperinfo">
+            <div class="columnflex">
+              <div>
+                <p>For designers</p>
+              </div>
+              <div>
+                <ul>
+                  <li>Go Pro!t</li>
+                  <li>Explore design work</li>
+                  <li>Design blog</li>
+                  <li>Overtime podcast</li>
+                  <li>Dribbble meetups</li>
+                  <li>Playoffs</li>
+                  <li>Weekly Warm-Up</li>
+                  <li>Code of conduct</li>
+                </ul>
+              </div>
             </div>
-            <div>
-              <ul>
-                <li>Post a job opening</li>
-                <li>Post a freelance project</li>
-                <li>Search for designers</li>
-              </ul>
+            <div class="columnflex">
+              <div>
+                <p>Hire designers</p>
+              </div>
+              <div>
+                <ul>
+                  <li>Post a job opening</li>
+                  <li>Post a freelance project</li>
+                  <li>Search for designers</li>
+                </ul>
+              </div>
+              <div>
+                <p>Brands</p>
+              </div>
+              <div>
+                <p>Advertise with us</p>
+              </div>
             </div>
-            <div>
-              <p>Brands</p>
+            <div class="columnflex">
+              <div>
+                <p>Company</p>
+              </div>
+              <div>
+                <ul>
+                  <li>About</li>
+                  <li>Careers</li>
+                  <li>Support</li>
+                  <li>Media kit</li>
+                  <li>Dribbble shop</li>
+                  <li>Testimonials</li>
+                  <li>API</li>
+                  <li>Terms of service</li>
+                  <li>Privacy policy</li>
+                </ul>
+              </div>
             </div>
-            <div>
-              <p>Advertise with us</p>
-            </div>
-          </div>
-          <div class="columnflex">
-            <div>
-              <p>Company</p>
-            </div>
-            <div>
-              <ul>
-                <li>About</li>
-                <li>Careers</li>
-                <li>Support</li>
-                <li>Media kit</li>
-                <li>Dribbble shop</li>
-                <li>Testimonials</li>
-                <li>API</li>
-                <li>Terms of service</li>
-                <li>Privacy policy</li>
-              </ul>
-            </div>
-          </div>
-          <div class="columnflex">
-            <div>
-              <p>Directories</p>
-            </div>
-            <div>
-              <ul>
-                <li>Top designers</li>
-                <li>Top design teams</li>
-                <li>Design jobs</li>
-                <li>Tags</li>
-                <li>Places</li>
-              </ul>
-            </div>
-            <div>
-              <p>Design assets</p>
-            </div>
-            <div>
-              <p>Shop Creative Market</p>
+            <div class="columnflex">
+              <div>
+                <p>Directories</p>
+              </div>
+              <div>
+                <ul>
+                  <li>Top designers</li>
+                  <li>Top design teams</li>
+                  <li>Design jobs</li>
+                  <li>Tags</li>
+                  <li>Places</li>
+                </ul>
+              </div>
+              <div>
+                <p>Design assets</p>
+              </div>
+              <div>
+                <p>Shop Creative Market</p>
+              </div>
             </div>
           </div>
         </section>
