--- a/profile.html
+++ b/profile.html
@@ -45,13 +45,13 @@
                 </li>
                 <li>
                   <a href="#">
-                    <img src="images/Component 5 – 2.png" alt="logo" />
+                    <img src="images/Component 8 – 2.png" alt="logo" />
                     <p>Favourites</p>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="images/Component 8 – 2.png" alt="logo" />
+                    <img src="images/Component 1 – 2.png" alt="logo" />
                     <p>Activires</p>
                   </a>
                 </li>
@@ -89,6 +89,51 @@
         </div>
       </div>
     <div class="maincontainer">
+      <div class="unvisibleheader">
+        <div class="blackheader">
+          <div class="blackheadernav flex">
+            <div class="headerlogo">
+              <a href="index.html">
+                <img src="images/design.today.png" alt="logo" />
+              </a>
+            </div>
+            <div class="black_nav">
+              <ul class="flex">
+                <li>
+                  <a href="index.html">
+                    <img src="images/Component 5 – 2.png" alt="logo" />
+                    <p>Home</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="images/Component 3 – 2.png" alt="logo" />
+                    <p>Explore</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="images/Component 4 – 2.png" alt="logo" />
+                    <p>Folders</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="images/Component 8 – 2.png" alt="logo" />
+                    <p>Favourites</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="images/Component 1 – 2.png" alt="logo" />
+                    <p>Activires</p>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
       <header>
         <form action="">
           <div>
@@ -100,15 +145,23 @@
         </form>
         <div>
           <div class="profilenav">
-            <div><p>go pro!</p></div>
-            <div><img src="images/Component 11 – 2.png" alt="message" /></div>
+            <div class="gopro">
+              <p>go pro!</p>
+            </div>
+            <div>
+              <img src="images/Component 11 – 2.png" alt="message" />
+            </div>
             <div>
               <img src="images/Component 7 – 2.png" alt="notificationbell" />
             </div>
             <div class="heafderprofileimage">
-              <img src="images/Group 79.png" alt="profileicon" />
+              <a href="index.html">
+                <img src="images/Group 79.png" alt="profileicon" />
+              </a>
             </div>
-            <div><button>upload</button></div>
+            <div>
+              <button>upload</button>
+            </div>
           </div>
         </div>
       </header>
@@ -202,78 +255,86 @@
           </table>
         </div>
       </section>
-      <section class="flex upperinfo">
-        <div class="columnflex">
-          <div>
-            <p>For designers</p>
-          </div>
-          <div>
-            <ul>
-              <li>Go Pro!t</li>
-              <li>Explore design work</li>
-              <li>Design blog</li>
-              <li>Overtime podcast</li>
-              <li>Dribbble meetups</li>
-              <li>Playoffs</li>
-              <li>Weekly Warm-Up</li>
-              <li>Code of conduct</li>
-            </ul>
-          </div>
+      <section class="textwrapper">
+        <div class="unvisiblefooterinfo">
+          <p>For designers </p>
+          <p>Hire designers</p>
+          <p>Company</p>
+          <p>Directories</p>
         </div>
-        <div class="columnflex">
-          <div>
-            <p>Hire designers</p>
+        <div class="upperinfo">
+          <div class="columnflex">
+            <div>
+              <p>For designers</p>
+            </div>
+            <div>
+              <ul>
+                <li>Go Pro!t</li>
+                <li>Explore design work</li>
+                <li>Design blog</li>
+                <li>Overtime podcast</li>
+                <li>Dribbble meetups</li>
+                <li>Playoffs</li>
+                <li>Weekly Warm-Up</li>
+                <li>Code of conduct</li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <ul>
-              <li>Post a job opening</li>
-              <li>Post a freelance project</li>
-              <li>Search for designers</li>
-            </ul>
+          <div class="columnflex">
+            <div>
+              <p>Hire designers</p>
+            </div>
+            <div>
+              <ul>
+                <li>Post a job opening</li>
+                <li>Post a freelance project</li>
+                <li>Search for designers</li>
+              </ul>
+            </div>
+            <div>
+              <p>Brands</p>
+            </div>
+            <div>
+              <p>Advertise with us</p>
+            </div>
           </div>
-          <div>
-            <p>Brands</p>
+          <div class="columnflex">
+            <div>
+              <p>Company</p>
+            </div>
+            <div>
+              <ul>
+                <li>About</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>Media kit</li>
+                <li>Dribbble shop</li>
+                <li>Testimonials</li>
+                <li>API</li>
+                <li>Terms of service</li>
+                <li>Privacy policy</li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <p>Advertise with us</p>
-          </div>
-        </div>
-        <div class="columnflex">
-          <div>
-            <p>Company</p>
-          </div>
-          <div>
-            <ul>
-              <li>About</li>
-              <li>Careers</li>
-              <li>Support</li>
-              <li>Media kit</li>
-              <li>Dribbble shop</li>
-              <li>Testimonials</li>
-              <li>API</li>
-              <li>Terms of service</li>
-              <li>Privacy policy</li>
-            </ul>
-          </div>
-        </div>
-        <div class="columnflex">
-          <div>
-            <p>Directories</p>
-          </div>
-          <div>
-            <ul>
-              <li>Top designers</li>
-              <li>Top design teams</li>
-              <li>Design jobs</li>
-              <li>Tags</li>
-              <li>Places</li>
-            </ul>
-          </div>
-          <div>
-            <p>Design assets</p>
-          </div>
-          <div>
-            <p>Shop Creative Market</p>
+          <div class="columnflex">
+            <div>
+              <p>Directories</p>
+            </div>
+            <div>
+              <ul>
+                <li>Top designers</li>
+                <li>Top design teams</li>
+                <li>Design jobs</li>
+                <li>Tags</li>
+                <li>Places</li>
+              </ul>
+            </div>
+            <div>
+              <p>Design assets</p>
+            </div>
+            <div>
+              <p>Shop Creative Market</p>
+            </div>
           </div>
         </div>
       </section>
