add additional changes in css file

--- a/index.html
+++ b/index.html
@@ -482,9 +482,15 @@
         </section>
         <footer>
           <div class="socialnetwork">
-            <img src="images/Component 12 – 2.png" alt="facebook" />
-            <img src="images/Component 13 – 2.png" alt="instagram" />
-            <img src="images/Component 14 – 2.png" alt="twitter" />
+            <a href="https://www.facebook.com/" target="_blank">
+              <img src="images/Component 12 – 2.png" alt="facebook" />
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="images/Component 13 – 2.png" alt="instagram" />
+            </a>
+            <a href="https://twitter.com/" target="_blank">
+              <img src="images/Component 14 – 2.png" alt="twitter" />
+            </a>
           </div>
           <div class="smartlogo">
             <span class="smartlogostart">For</span>
